Clase 19 Node js

--- a/Backend/Clase-18-19-Node-js/package.json
+++ b/Backend/Clase-18-19-Node-js/package.json
@@ -13,8 +13,11 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.6"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.6",
+    "nodemailer": "^6.10.0"
   }
 }
