--- a/Backend/Clase-18-19-20-21-22-26-Node-js/package.json
+++ b/Backend/Clase-18-19-20-21-22-26-Node-js/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
+    "mysql2": "^3.13.0",
     "nodemailer": "^6.10.0"
   }
 }
